<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green">

    <TextView
        android:id="@+id/add_new_data_titile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_titile_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/add_new_data_titile_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_data_save_button"
        android:text="@string/add_new_data_save_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_new_data_save_button_margin_start"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_titile"
        app:layout_constraintStart_toStartOf="@id/add_new_data_titile"
        app:layout_constraintEnd_toStartOf="@id/add_new_data_cancel_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_data_cancel_button"
        android:text="@string/add_new_data_cancel_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_new_data_cancel_button_margin_start"
        android:layout_marginEnd="@dimen/add_new_data_cancel_button_margin_end"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_titile"
        app:layout_constraintStart_toEndOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_titile"/>

    <TextView
        android:id="@+id/add_new_data_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_date_title_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_save_button"
        app:layout_constraintStart_toStartOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_save_button"/>

    <EditText
        android:id="@+id/add_new_data_date_field"
        android:layout_width="@dimen/add_new_data_date_field_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_date_title"
        app:layout_constraintStart_toStartOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_save_button" />

    <TextView
        android:id="@+id/add_new_data_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_time_title_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_save_button"
        app:layout_constraintStart_toStartOf="@id/add_new_data_cancel_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_cancel_button"/>

    <EditText
        android:id="@+id/add_new_data_time_field"
        android:layout_width="@dimen/add_new_data_time_field_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="time"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_time_title"
        app:layout_constraintStart_toStartOf="@id/add_new_data_cancel_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_cancel_button" />

    <TextView
        android:id="@+id/add_new_data_pressure_top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_pressure_top_title_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_time_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_new_data_pressure_top_field"
        android:layout_width="@dimen/add_new_data_pressure_top_field_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_pressure_top_title"
        app:layout_constraintStart_toStartOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_cancel_button" />

    <TextView
        android:id="@+id/add_new_data_pressure_bottom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_pressure_bottom_title_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_pressure_top_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_new_data_pressure_bottom_field"
        android:layout_width="@dimen/add_new_data_pressure_bottom_field_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_pressure_bottom_title"
        app:layout_constraintStart_toStartOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_cancel_button" />

    <TextView
        android:id="@+id/add_new_data_heart_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_data_heart_rate_title_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_pressure_bottom_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_new_data_heart_rate_field"
        android:layout_width="@dimen/add_new_data_heart_rate_field_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/add_new_data_heart_rate_title"
        app:layout_constraintStart_toStartOf="@id/add_new_data_save_button"
        app:layout_constraintEnd_toEndOf="@id/add_new_data_cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>